# whakit

./: .env.example  LICENSE  README.md  pyproject.toml
whakit/: main.py
whakit/config/: settings.py
whakit/controllers/: webhook.py
whakit/models/: message.py
whakit/routes/: webhook.py
whakit/services/: ai.py  http.py  message_handler.py  storage.py  whatsapp.py
whakit/state/: manager.py
whakit/utils/: __init__.py
