[project]
name = "whakit"
version = "0.1.0"
description = "Whatsapp kit to build AI chatbots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "langchain-community>=0.3.8",
    "langchain-openai>=0.2.9",
    "langchain>=0.3.8",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
]

[tool.uv]
dev-dependencies = [
    "whakit",
]

[tool.uv.sources]
whakit = { workspace = true }

[tool.poetry]
name = "whakit"
version = "0.1.0"
description = ""
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
